--- a/decolle_code/requirements.txt
+++ b/decolle_code/requirements.txt
@@ -10,7 +10,7 @@ PyYAML>=5.3.1
 scipy>=1.5.2
 six>=1.15.0
 tensorboardX>=2.1
-torch>=1.6.0
+torch==1.8.0
 torchvision>=0.7.0
 tqdm>=4.48.2
 Pillow>=8.1.1
