--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,9 @@ dill
 flatbuffers
 filelock==3.0.12
 gast
-google-api-python-client
 h5py
-huggingface-hub
 idna_ssl
-imageio==2.9.0
+imageio
 imagesize
 kiwisolver
 jsonpickle
@@ -44,12 +42,12 @@ scikit-learn
 scipy
 six
 tqdm
-transformers
 typeguard
-tensorflow==2.5.0
-tokenizers
-tensorflow-probability==0.11.0
-tensorflow_addons
+tensorflow==2.10.0
+tensorflow-probability==0.23.0
+tensorflow-text==2.10.0
+tensorflow-datasets
+tensorflow-addons
 tensorlayer
 termcolor
 typing_extensions
@@ -63,3 +61,4 @@ tables
 numpy
 cloudpickle==1.3.0
 numexpr
+GPUtil
